--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NODE_ENV= development
 PORT=5000
 DATABASE_URL=mongodb+srv://rashiksaif:BJS8JWy4JHTg6HYd@cluster0.lb9uo.mongodb.net/bicycleData?retryWrites=true&w=majority&appName=Cluster0
-
+NODE_ENV= development
 
 # rashiksaif
 # BJS8JWy4JHTg6HYd
