--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "http-status": "^2.1.0",
     "mongoose": "^8.8.2",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
