--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
     "multer": "^1.4.5-lts.1",
+    "shurjopay": "^0.12.1",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
