--- a/.env
+++ b/.env
@@ -12,5 +12,13 @@ CLOUDINARY_CLOUD_NAME='dfdyvnxcw'
 CLOUDINARY_API_KEY='717391175246524'
 CLOUDINARY_API_SECRET=usJrywRYyySWva9wtO6zGYR1Eew
 DEFAULT_PASS=rashik!@#
+
+
+SP_ENDPOINT = https://sandbox.shurjopayment.com
+SP_USERNAME = sp_sandbox
+SP_PASSWORD = pyyk97hu&6u6
+SP_PREFIX = SP
+# SP_RETURN_URL = https://sandbox.shurjopayment.com/response
+SP_RETURN_URL = http://localhost:5173/verify-order
 # rashiksaif
 # BJS8JWy4JHTg6HYd
