--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^8.8.2",
     "multer": "^1.4.5-lts.1",
     "shurjopay": "^0.12.1",
+    "streamifier": "^0.1.1",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
@@ -39,6 +40,7 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.9.1",
+    "@types/streamifier": "^0.1.2",
     "@types/validator": "^13.12.2",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
